# learn_2d_game_physics_programming

./: CMakeLists.txt  README.md  cmake-build.bat
src/: Application.cpp  Application.h  Graphics.cpp  Graphics.h  Main.cpp
src/Physics/: Body.cpp  Body.h  CollisionDetection.cpp  CollisionDetection.h  Constants.h  Constraint.cpp  Constraint.h  Contact.cpp  Contact.h  Force.cpp  Force.h  Geometry.cpp  Geometry.h  MatMN.cpp  MatMN.h  Particle.cpp  Particle.h  Shape.cpp  Shape.h  Vec2.cpp  Vec2.h  VecN.cpp  VecN.h  World.cpp  World.h
